# drf-api

./: README.md  pyproject.toml
drf_api/: settings.py  urls.py
