[tool.poetry]
name = "drf-api"
version = "0.1.0"
description = ""
authors = ["duajaradat <duajaradat164@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
